# pm-tp1

./: BibTexHasPages.cpp  BibTexHasPages.h  BibtexArticle.cpp  BibtexArticle.h  BibtexBook.cpp  BibtexBook.h  BibtexFormat.cpp  BibtexFormat.h  BibtexInproceedings.cpp  BibtexInproceedings.h  CMakeLists.txt  README.md  authorreader.cpp  authorreader.h  authors.cpp  authors.h  bibfile.cpp  bibfile.h  bibfileio.cpp  bibfileio.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pages.cpp  pages.h  pagesreader.cpp  pagesreader.h  tp1.desktop  tp1.pro  tp1_harmattan.desktop  util.cpp  util.h
